--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{/css/forms.css}">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -16,7 +18,7 @@
 <body>
 
 <div class="container">
-    <h1>Shop</h1>
+    <h1>Home Sets</h1>
     <hr>
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
