--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Part Form</title>
+    <link rel="stylesheet" th:href="@{/css/forms.css}">
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
