--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -8,18 +8,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" th:href="@{/css/forms.css}">
+
+    <link rel="stylesheet" th:href="@{/css/mainscreen.css}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>My Bicycle Shop</title>
+    <title>My Furniture Shop</title>
 </head>
 <body>
+<h1>Home Sets</h1>
+<hr>
+<!--container for images -->
+<div class="photo-container">
+    <img th:src="@{/images/furniture1.jpg}" alt="Photo of furniture">
+    <img th:src="@{/images/furniture2.jpg}" alt="Photo of furniture">
+    <img th:src="@{/images/furniture3.jpg}" alt="Photo of furniture">
+    <img th:src="@{/images/furniture4.jpg}" alt="Photo of furniture">
+    <img th:src="@{/images/furniture5.jpg}" alt="Photo of furniture">
+    <img th:src="@{/images/furniture6.jpg}" alt="Photo of furniture">
+</div>
 
 <div class="container">
-    <h1>Home Sets</h1>
+    <a class="about-link" th:href="@{/about}"><h2>About Us</h2></a>
     <hr>
+
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
         Filter: <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
@@ -65,6 +78,9 @@
             window.location = "[[@{/}]]";
         }
     </script>
+
+
+
     <br><br>
     <a th:href="@{/showFormAddProduct}" class="btn btn-primary btn-sm mb-3">Add Product</a>
     <table class="table table-bordered table-striped">
