--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" th:href="@{/css/forms.css}">
+
     <title>Part Form</title>
 
 <!--    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
