--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -38,6 +38,16 @@
     <p>Company Name:
         <input type="text" th:field="*{companyName}" placeholder="Company Name" class="form-control mb-4 col-4"/></p>
 
+    <!-- Cola's validator block-->
+    <div th:if="${#fields.hasAnyErrors()}">
+        <ul>
+            <li th:each="err: ${#fields.allErrors()}" th:text="${err}">
+
+            </li>
+        </ul>
+    </div>
+    <!-- Cola's validator block-->
+
 <p><input type="submit" value="Submit" /></p>
 </form>
 <a href="http://localhost:8080/">Link
