--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -16,12 +16,15 @@
     <!-- Add hidden form field to handle update -->
     <p><input type="hidden" th:field="*{id}"/></p>
 
-    <p><input type="text" th:field="*{name}" placeholder="Name" class="form-control mb-4 col-4"/></p>
+    <p>Name of Set:
+        <input type="text" th:field="*{name}" placeholder="Name" class="form-control mb-4 col-4"/></p>
 
-    <p><input type="text" th:field="*{price}" placeholder= "Price" class="form-control mb-4 col-4"/></p>
+    <p>Price:
+        <input type="text" th:field="*{price}" placeholder= "Price" class="form-control mb-4 col-4"/></p>
 
 
-    <p><input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
+    <p>Inventory Number:
+        <input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
 
     <p>
     <div th:if="${#fields.hasAnyErrors()}">
@@ -73,7 +76,7 @@
         </tbody>
     </table>
 
-<!--<footer><a href="http://localhost:8080/">Link-->
-<!--    to Main Screen</a></footer>-->
+<footer><a href="http://localhost:8080/">
+   Link to Main Screen</a></footer>
 </body>
 </html>
