--- a/src/main/resources/templates/Success.html
+++ b/src/main/resources/templates/Success.html
@@ -5,7 +5,7 @@
     <title>Success</title>
 </head>
 <body>
-<p>Part purchased!</p>
+<p>Set purchased!</p>
 <a href="http://localhost:8080/">Link
     to Main Screen</a>
 </body>
