Part H - Displays error message when inventory value is greater than max and min

--- a/src/main/resources/templates/Failure.html
+++ b/src/main/resources/templates/Failure.html
@@ -5,8 +5,7 @@
     <title>Failure</title>
 </head>
 <body>
-<p>Failed to buy part</p>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<p>Not Enough Inventory!</p>
+<a href="http://localhost:8080/">Home</a>
 </body>
 </html>
