--- a/src/main/resources/templates/Success.html
+++ b/src/main/resources/templates/Success.html
@@ -5,8 +5,7 @@
     <title>Success</title>
 </head>
 <body>
-<p>Set purchased!</p>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<p>Purchase Successful</p>
+<a href="http://localhost:8080/">Home</a>
 </body>
 </html>
