Part I - 2 unit tests were made to test the min and max fields

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -48,8 +48,7 @@
 
 </p>
 
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<a href="http://localhost:8080/">Home</a>
 </body>
 
 </html>
