--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="container">
-    <a class="about-link" th:href="@{/about}"><h2>About Us</h2></a>
+    <a th:href="@{/about}" class="btn btn-primary btn-sm mb-3"><h2>About Us</h2></a>
     <hr>
 
     <h2>Parts</h2>
