--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -50,7 +50,6 @@
 
 <p><input type="submit" value="Submit" /></p>
 </form>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<a href="http://localhost:8080/">Home</a>
 </body>
 </html>
